<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Gravity Simulated Joypad (JOY-DROID)</string>
    <string name="text_servers">Servers</string>
    <string name="text_preferences">Preferences</string>
    <string name="text_about">About</string>
    <string name="text_help">Help</string>
    <string name="app_name">JoyDroid</string>
    <string name="text_help_description_title">What is Joy-Droid?</string>
    <string name="text_help_description">Joy-Droid which is short hand name for Gravity Simulated Joypad for Android is a Accelerometer based app which behaves as a WLAN supported joypad with the accelerometer based function. Basically the directinal arrow of the traditional joypad is replaced by the accelerometer. The ball position indicates the direction of the Joy-Droid. To use the Joy-Droid just tilt the phone as required and press the 4 buttons on the screen.</string>
    <string name="text_about_title">About</string>
    <string name="text_about_desc">"This project is the effort of students of Kathmandu University Department of Computer Engineering 3rd year. There are 6 members included in the development of this project. This project has been targetted especially for those people who have android phone of version at least 2.1.1. This project acts as wireless joypad when connected to the PC. The group members involved in the development of this project are:\nNigesh Shakya\nDeepen Raj Dawadi\nSuman Ghimire\nSaroj Thapa \n Arun Budhathoki\nAnuj Shrestha "</string>
    <string name="preference_title">Preferences</string>
    <string name="preference_sensitivity">Sensitivity</string>
    <string name="text_accelerometer_sensitivity">Sensitivity</string>
    <string name="text_name">Name:</string>
    <string name="text_new_connection">New Server</string>
    <string name="text_password">Password:</string>
    <string name="text_host">Host:</string>
    <string name="text_hint_host">192.168.0.1</string>
    <string name="text_port">Port:</string>
    <string name="text_connection_established">Connection is established</string>
    <string name="text_new">New Connection</string><string name="text_wifi">Add New Server</string><string name="text_save">Save</string>
	<string name="text_connection_closed">Connection has been closed</string>
	<string name="text_connection_refused">Connection refused. Server running?</string>
	<string name="text_no_connection_selected">No connection selected\nPress the \"Menu\" button\nSelect \"Connections\"</string>
    <string name="text_illegal_connection_parameter">Illegal connection parameter</string>
    <string name="text_authenticated">Login successful</string>
	<string name="text_not_authenticated">Wrong password</string>
	<string name="text_no_connection">No connection\nPress the \"Menu\" button to add a new one</string>
	<string name="text_connections">Servers</string>
	<string name="text_first_run_dialog">Since you are launching the app for first time, its good idea to read help.\nWant to read help?</string>
	<string name="text_first_run">First Run</string>
	<string name="text_no">No</string>
	<string name="test_sensitivity">Sensitivity</string>
	<string name="text_yes">Yes</string>
	<string name="text_buttons">Buttons</string>
	<string name="text_map_key">Map Buttons</string>
	<string name="map_x">Map Button X</string>
	<string name="map_a">Map Button A</string>
	<string name="map_y">Map Button Y</string>
	<string name="map_b">Map Button B</string>
	<string name="text_enable_sensor">Disable Sensor</string><string name="text_sensor">Sensor</string><string-array
		name="connection_action_name">
		<item>Use</item>
		<item>Edit</item>
		<item>Remove</item>
	</string-array>
	
	
	
	
	
	
	
	
	
	
	
	
	
</resources>